sucessfully integrated with prediction service

--- a/api/templates/main.html
+++ b/api/templates/main.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
-  <title>Centering an Element on the Page</title>
+  <title>Text Identification with Bert and Deep Learning</title>
   <link rel="stylesheet" href="{{url_for('static', filename='templates.css')}}">
   <link href="https://fonts.googleapis.com/css2?family=PT+Sans&family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 <link rel="apple-touch-icon" sizes="180x180" href="{{url_for('static', filename='apple-touch-icon.png')}}">
