--- a/api/templates/main.html
+++ b/api/templates/main.html
@@ -89,8 +89,8 @@
         </section>
         <section>
 
-            <form action="/">
-                <textarea id="para" rows="25" cols="120" name="text">{{ text }}</textarea>
+            <form action="/analyze-ui">
+                <textarea id="para" rows="10" cols="120" name="text">{{ text }}</textarea>
 
                 <div>
                     <input type="submit" class="button"/>
